fix: enhance table spacing and scroll

--- a/src/Views/Components/ListTable/ListTable/ListTable.module.scss
+++ b/src/Views/Components/ListTable/ListTable/ListTable.module.scss
@@ -254,6 +254,7 @@
     .table {
         border-radius: 4px;
         border: 1px solid var(--givewp-neutral-5);
+        overflow: hidden;
     }
 
     .tableGroup {
