--- a/src/Views/Components/ListTable/TableCell/TableCell.module.scss
+++ b/src/Views/Components/ListTable/TableCell/TableCell.module.scss
@@ -99,7 +99,7 @@
 
     tr:last-child {
         .tableCell {
-            padding-block-end: var(--givewp-spacing-6);
+            padding-block-end: var(--givewp-spacing-12);
         }
     }
 }
